fixed message bar spacing

--- a/css/quiet.css
+++ b/css/quiet.css
@@ -1942,7 +1942,7 @@ background: var(--tertiary-color) !important;
 
 .chat .textArea-2Spzkt {
   background-color: transparent !important;
-  line-height: 1.25rem !important;
+  line-height: 2em !important;
 }
 
 .chat .inner-zqa7da {
